...
    'Timed Out',
    'to',
    requiresFielder: false,
    bowlerCredited: false,
  ),
  obstructingField(
    11,
    'Obstructing Field',
    'of',
    requiresFielder: false,
    bowlerCredited: false,
  );

...
